--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Galada&display=swap');
 
   @font-face {
     font-family: 'Mosk200';
@@ -69,6 +70,8 @@
     src: url('/Fonts/mosk/Mosk Normal 400.woff') format('woff');
     }
 
+
+/*Texto principal*/
   .text-stroke {
     color: transparent;
     -webkit-text-stroke: 2px #1f2937 ;
@@ -77,5 +80,42 @@
   .hover\:text-stroke-none:hover {
     -webkit-text-stroke: 0;
   }
+
+/*Scroll bar*/
+
+::-webkit-scrollbar{
+  width: 18px;
+  
+}
+
+::-webkit-scrollbar-track{
+  background: #111827;
+  
+}
+
+::-webkit-scrollbar-thumb{
+  background: #6366f1;
+  border: 3px solid #111827;
+  border-radius: 12px;
+}
   
     
+.flip-card {
+  perspective: 1000px;
+}
+
+.flip-card-inner{
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+
+.flip-card-front, .flip-card-back{
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.flip-card-back{
+  transform: rotateY(180deg);
+}
+
+
